styles/apps.css
/* ... */
.button-row {
  display: flex;
  flex-flow: row wrap;
  /* height: 4.8em; */
  overflow: scroll;
  overflow-y: overlay;
  overflow-x: hidden;
}

#modtooltipleftbottom {
  grid-row: 3;
  padding: 0 0.5em 0 0;
  display: flex;
  flex-flow: column nowrap;
  justify-content: stretch;
  color: black;
  border: 0.35em solid darkred;
  border-radius: 0.35em;
  height: 100%;
}

#modtooltipleftbottom > h4 {
  background-color: darkred;
}

#modtooltipleftbottom .shaded-group {
  height: 100%;
  /* min-height: 13em; */
}

#modtooltipcenter {
  grid-column: 2;

  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  align-items: stretch;
  align-content: start;
  padding: 0 5px;
}

#modtooltipright > div > *,
#modtooltipcenter > div > * {
  margin-top: 5px;
}

#modtooltipright {
  grid-column: 3;

  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  align-items: stretch;
  align-content: start;
  border: 5px;
  padding: 0 5px;
}

.modtooltipgroup {
  border: 5px;
  margin-bottom: 5px;
}

.modtooltipgroup > * {
  padding-left: 10px;
}

.removemod {
  cursor: pointer;
}

.removemod:hover {
  /* font-weight: bold; */
  cursor: pointer;
  text-shadow: 0 0 10px red;
}

.removemod:hover::after {
  font-family: var(--font-family-icons);
  content: '\f1f8';
  display: inline-block;
  padding-right: 3px;
  vertical-align: middle;
  /* font-weight: 900; */
  color: dimgrey;
}

.gmbutton {
  display: inline-block;
  text-align: center;
  font-size: var(--font-size-small);
  padding: 0.25em;
  width: fit-content;
  background: rgba(255, 255, 240, 0.8);
  line-height: unset;
  height: fit-content;
  min-width: 5.2em;
  max-width: 7.5em;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.modttlabel {
  font-size: 1.5em;
  text-align: center;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
}

.modttlabel > div {
  color: #f0f0e0;
  background-color: rgb(28, 32, 36);
  border: 0 solid rgb(28, 32, 36);
  border-radius: 0.25em;
  padding: 0.35em 0;
  min-width: 2.5em;
}

.modifier-bucket {
  bottom: 100px !important;
  z-index: 1000;
  overflow: scroll;
  overflow-y: overlay;
  overflow-x: hidden;
  height: min-content !important;
}

.modttt {
  text-align: center;
  border-radius: 10px;
  width: 63.5em;
  position: fixed;
  z-index: 999;
}

.modttt .modtooltip {
  padding: 0.35em;
  border-radius: 0.75em;
  box-shadow:
    0 4px 8px 4px rgba(0, 0, 0, 0.8),
    0 6px 20px 0 rgba(0, 0, 0, 0.2);
  background: #f0f0e0;
}

.modtooltip .plus,
.modifierbucket .plus {
  color: lightgreen;
}

.modtooltip .minus,
.modifierbucket .minus {
  color: orange;
}

.modtooltip .collapsible-wrapper {
  margin-top: 0.25em;
}

.modtooltip .collapsible-wrapper > input {
  display: none;
}

.modtooltip .collapsible-wrapper .label-toggle,
.modtooltip .collapsible-wrapper > label {
  appearance: menulist-button;
  -webkit-appearance: menulist-button;
  border: 1px solid rgb(122, 121, 113);
  padding: 0.35em;
  border-radius: 0.25em;
  background: rgba(255, 255, 240, 0.8);
  /* font-family: var(--font-family-icons); */
}

.modtooltip .collapsible-wrapper > label:after {
  font: normal normal normal 12px/1;
  font-family: var(--font-family-icons);
  font-weight: 900;
  content: '\f078';
  float: right;
}

.modtooltip .collapsible-wrapper > input:checked + label {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.modtooltip .collapsible-wrapper > input:checked + label:after {
  font: normal normal normal 12px/1;
  font-family: var(--font-family-icons);
  font-weight: 900;
  content: '\f077';
  float: right;
}

.modtooltip .collapsible-wrapper .collapsible-content {
  border-top: none;
  border-bottom-left-radius: 0.25em;
  border-bottom-right-radius: 0.25em;
  font-size: var(--font-size-small);
}

.modtooltip .collapsible-wrapper .content-inner {
  padding: 0.35em 0.7em;
}

.modtooltip .collapsible-wrapper .content-inner .selectable {
  min-height: 1.1em;
  padding-left: 1.2em;
  text-indent: -0.7em;
}

.modtooltip .collapsible-wrapper .content-inner .selectable:hover {
  text-shadow: 0 0 0.8em red;
}

.modtooltip .subtitle {
  color: rgb(64, 64, 64);
  font-weight: bold;
  width: 100%;
}

/* =================================================== */
/* Copy of glink and gurpslink from simple.css         */
/* =================================================== */
.system-gurps .gurpslink > b {
  font-weight: 900;
  color: black;
  font-family: inherit;
}

.system-gurps .gurpslink,
.system-gurps .glinkmodplus,
.system-gurps .glinkmodminus,
.system-gurps .glinkmod {
  padding: 2px 8px;
  border-radius: 999px;
  font-weight: 600;
  line-height: 1.6;
  display: inline-block;
}

.system-gurps .gurpslink {
  border: 1px solid var(--gga-bordercolor-gurpslink);
  background: var(--gga-background-gurpslink);
  color: var(--gga-color-gurpslink);
}

.system-gurps .gurpslink:hover,
.system-gurps .glinkmodplus:hover,
.system-gurps .glinkmodminus:hover,
.system-gurps .glinkmod:hover {
  color: var(--gga-color-gurpslink-hover);
  cursor: pointer;
}

.system-gurps .gurpslink:active,
.system-gurps .glinkmodplus:active,
.system-gurps .glinkmodminus:active,
.system-gurps .glinkmod:active {
  filter: invert(100%);
}

.system-gurps .gurpslink:hover {
  background-color: var(--gga-background-rollable-hover);
}

.system-gurps .glinkmod {
  background-color: var(--gga-background-glinkmod);
  border: 1px solid var(--gga-bordercolor-glinkmod);
  color: black;
}

.system-gurps .glinkmodplus {
  background-color: var(--gga-background-glinkmodplus);
  border: 1px solid var(--gga-bordercolor-glinkmodplus);
  color: var(--gga-color-glinkmodplus);
}

.system-gurps .glinkmodplus:hover {
  background-color: var(--gga-background-glinkmodplus-hover);
}

.system-gurps .glinkmodminus {
  background-color: var(--gga-background-glinkmodminus);
  border: 1px solid var(--gga-bordercolor-glinkmodminus);
  color: var(--gga-color-glinkmodminus);
}
/* ... */

